--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "test.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "test-report": "mocha --reporter mochawesome"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "chai": "^5.1.0"
   },
   "dependencies": {
-    "mocha": "^10.4.0"
+    "mocha": "^10.4.0",
+    "mochawesome": "^7.1.3"
   }
 }
